k-manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openkubescope
spec: {}
status: {}
