k-manifest/report.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: report
  name: report
  namespace: openkubescope
spec:
  replicas: 2
  selector:
    matchLabels:
      app: report

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1

  template:
    metadata:
      labels:
        app: report
    spec:
      securityContext:
        runAsUser: 10001
        runAsGroup: 10001
        runAsNonRoot: true

      terminationGracePeriodSeconds: 30
      containers:
        - image: sajaldhiman1999/report:v3
          imagePullPolicy: Always
          name: report
          ports:
            - containerPort: 50052
          resources:
            requests:
              memory: 300Mi
              cpu: 200m
            limits:
              memory: 350Mi
              cpu: 250m
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
            
                
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - sleep 10

#this servive is exposing the report service 

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: report
  name: report-svc
  namespace: openkubescope
spec:
  ports:
  - port: 50052
    protocol: TCP
    targetPort: 50052
  selector:
    app: report
  type: ClusterIP
