k-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openkubescope-ingress
  namespace: openkubescope
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: openkubescope.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: core-api-svc
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-svc
            port:
              number: 80
